--- a/Kicktoo.mw
+++ b/Kicktoo.mw
@@ -1,67 +1,38 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://github.com/r1k0/kicktoo|header=true}}
-}}
-
-{{Dated}}
-
-'''Kicktoo''' is meant to automate the manual steps required to build a working Portage based distribution. The project is a fork from [https://github.com/agaffney/quickstart Quickstart] and under active development.
+[https://github.com/r1k0/kicktoo Kicktoo] is meant to automate the manual steps required to build a working Portage based distro. The project is a fork from [http://agaffney.org/quickstart.php Quickstart] and under active development.
 
 == Setup ==
-
-You can use Kicktoo inside almost any Linux LiveCD, for instance a Gentoo minimal install CD, SysrescueCD or Ubuntu. Setup a pre-install environment by following these steps:
-
-# Download the LiveCD.
-# Boot the LiveCD.
-# Setup network connectivity.
-
+You can use Kicktoo inside almost any Linux LiveCD, for instance a Gentoo minimal install CD, SysrescueCD or Ubuntu. Setup your pre-install environment by following these steps:
+# Download the LiveCD
+# Boot the LiveCD
+# Setup network connectivity
 {{Warning|You should NOT run it on anything else than a LiveCD.}}
 
+
 == Installation ==
+You can install Kicktoo using two methods. The first can be used on all Linux distributions with at least git to download the application. The second method uses an ebuild to install Kicktoo.
 
-You can install Kicktoo using three methods.
-
-=== Version package ===
-
-You can download the package from the [https://github.com/r1k0/kicktoo/tags Kicktoo website].
-
-{{RootCmd
-|cd ~
-|wget "<nowiki>https://github.com/r1k0/kicktoo/archive/v1.zip"</nowiki>
-|unzip v1.zip
-|cd kicktoo-1
-}}
-
-=== Latest from Git ===
-
-{{RootCmd
-|cd ~
-|git clone <nowiki>git://github.com/r1k0/kicktoo.git</nowiki>
-}}
+=== Git ===
+{{RootCmd|cd ~|git clone git://github.com/r1k0/kicktoo.git}}
 
 === Ebuild ===
+You can download and emerge the ebuild from the Kicktoo website. 
+{{RootCmd|mkdir -p /root/sys-apps/kicktoo|cd /root/sys-apps/kicktoo|wget "<nowiki>http://cloud.github.com/downloads/r1k0/kicktoo/kicktoo-9999.ebuild"</nowiki>|ebuild kicktoo-9999.ebuild digest|<nowiki>PORTDIR_OVERLAY="/root" emerge -av sys-apps/kicktoo</nowiki>}}
 
-{{Important|This repository is no longer available with this method.}}
-Alternatively, you can use the one provided by the ''ltsp'' [[ebuild repository]]:
 
-{{RootCmd|layman -a ltsp}}
+Alternatively, you can use the one provided by the ltsp overlay.
+{{Emerge|app-portage/layman}}
+<!-- Kicktoo is not in the portage tree, please don't use Emerge template. -->
+{{RootCmd|layman -a ltsp|echo ">=sys-apps/kicktoo-9999 **" >> /etc/portage/package.keywords|emerge -av sys-apps/kicktoo}}
 
-Then install the package:
-{{Emerge|kicktoo}}
 
 == Configuration ==
-
 Kicktoo can be configured with a installer profile. Several example profiles are already available in the profiles directory.
-
 {{RootCmd|ls -R /root/kicktoo/profiles}}
 
-{{Note|When you installed using the ebuild, the profiles are available in {{Path|/usr/share/kicktoo/profiles}}.}}
 
 == Running Kicktoo ==
-
 Call the kicktoo application with the profile you just edited.
-
-{{RootCmd|./kicktoo -p profiles/gentoo/gentoo.profile -v|reboot}}
-
-{{Note|When you installed using the ebuild, the kicktoo app is available in {{Path|/usr/bin/kicktoo}}.}}
+{{RootCmd|./kicktoo -v profiles/gentoo/gentoo.profile|reboot}}
+{{Note|When you installed using the ebuild, the kicktoo app is available in /usr/bin/kicktoo.}}
 
 [[Category:Core system]]
