--- a/Asus_Eee_PC_1215B.mw
+++ b/Asus_Eee_PC_1215B.mw
@@ -1,223 +1,2 @@
-{{Stub}}
-
-[[Image:1215B red asus eeepc-550x382.jpg|right]]
-
-== Hardware ==
-{{RootCmd|lspci|output=<pre>
-00:00.0 Host bridge: Advanced Micro Devices [AMD] Device 1510
-00:01.0 VGA compatible controller: ATI Technologies Inc Device 9806
-00:01.1 Audio device: ATI Technologies Inc Device 1314
-00:04.0 PCI bridge: Advanced Micro Devices [AMD] Device 1512
-00:05.0 PCI bridge: Advanced Micro Devices [AMD] Device 1513
-00:11.0 SATA controller: ATI Technologies Inc SB700/SB800 SATA Controller [AHCI mode]
-00:12.0 USB Controller: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-00:12.2 USB Controller: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-00:13.0 USB Controller: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-00:13.2 USB Controller: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-00:14.0 SMBus: ATI Technologies Inc SBx00 SMBus Controller (rev 42)
-00:14.2 Audio device: ATI Technologies Inc SBx00 Azalia (Intel HDA) (rev 40)
-00:14.3 ISA bridge: ATI Technologies Inc SB700/SB800 LPC host controller (rev 40)
-00:14.4 PCI bridge: ATI Technologies Inc SBx00 PCI to PCI Bridge (rev 40)
-00:15.0 PCI bridge: ATI Technologies Inc Device 43a0
-00:15.2 PCI bridge: ATI Technologies Inc Device 43a2
-00:18.0 Host bridge: Advanced Micro Devices [AMD] Device 1700 (rev 43)
-00:18.1 Host bridge: Advanced Micro Devices [AMD] Device 1701
-00:18.2 Host bridge: Advanced Micro Devices [AMD] Device 1702
-00:18.3 Host bridge: Advanced Micro Devices [AMD] Device 1703
-00:18.4 Host bridge: Advanced Micro Devices [AMD] Device 1704
-00:18.5 Host bridge: Advanced Micro Devices [AMD] Device 1718
-00:18.6 Host bridge: Advanced Micro Devices [AMD] Device 1716
-00:18.7 Host bridge: Advanced Micro Devices [AMD] Device 1719
-01:00.0 Network controller: Broadcom Corporation Device 4727 (rev 01)
-02:00.0 Ethernet controller: Attansic Technology Corp. Device 2062 (rev c1)
-07:00.0 USB Controller: Device 1b21:1042
-</pre>}}
-
-=== BIOS ===
-
-=== CPU ===
-The CPU is an AMD E-450 with 2 cores.
-{{Cmd|cat /proc/cpuinfo|output=<pre>
-processor	: 0
-vendor_id	: AuthenticAMD
-cpu family	: 20
-model		: 2
-model name	: AMD E-450 APU with Radeon(tm) HD Graphics
-stepping	: 0
-cpu MHz		: 1646.232
-cache size	: 512 KB
-physical id	: 0
-siblings	: 2
-core id		: 0
-cpu cores	: 2
-apicid		: 0
-initial apicid	: 0
-fpu		: yes
-fpu_exception	: yes
-cpuid level	: 6
-wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse
-                  sse2 ht syscall nx mmxext fxsr_opt pdpe1gb rdtscp lm constant_tsc rep_good nopl nonstop_tsc
-                  extd_apicid aperfmperf pni monitor ssse3 cx16 popcnt lahf_lm cmp_legacy svm extapic cr8_legacy
-                  abm sse4a misalignsse 3dnowprefetch ibs skinit wdt arat npt lbrv svm_lock nrip_save pausefilter
-bogomips	: 3292.46
-TLB size	: 1024 4K pages
-clflush size	: 64
-cache_alignment	: 64
-address sizes	: 36 bits physical, 48 bits virtual
-power management: ts ttp tm stc 100mhzsteps hwpstate
-</pre>}}
-
-Some CPU feature flags:
-* [[Wikipedia:Streaming_SIMD_Extensions|sse]], 
-* [[Wikipedia:SSE2|sse2]], 
-* [[Wikipedia:HyperTransport|ht]], 
-* [[Wikipedia:NX_bit|nx]], 
-* [[Wikipedia:SSSE3|ssse3]], 
-* [[Wikipedia:AMD-V#AMD_virtualization_.28AMD-V.29|svm]], 
-* [[Wikipedia:SSE4a#SSE4a|sse4a]], 
-* [http://boincfaq.mundayweb.com/index.php?language=1&view=176 CPU - Register Acronyms], 
-* [http://blog.incase.de/index.php/cpu-feature-flags-and-their-meanings/ CPU feature flags and their meanings].
-
-{{Cmd|lscpu|output=<pre>
-Architecture:          x86_64 
-CPU op-mode(s):        32-bit, 64-bit 
-Byte Order:            Little Endian 
-CPU(s):                2 
-On-line CPU(s) list:   0,1 
-Thread(s) per core:    1 
-Core(s) per socket:    2 
-CPU socket(s):         1 
-NUMA node(s):          1 
-Vendor ID:             AuthenticAMD 
-CPU family:            20 
-Model:                 2 
-Stepping:              0 
-CPU MHz:               1646.572 
-BogoMIPS:              3292.69 
-Virtualization:        AMD-V 
-L1d cache:             32K 
-L1i cache:             32K 
-L2 cache:              512K 
-NUMA node0 CPU(s):     0,1
-</pre>}}
-
-=== Graphics ===
-The GPU is Radeon HD 6320 ([[Wikipedia:Comparison_of_AMD_graphics_processing_units#IGP_.28HD_6xxx.29|Evergreen series]]). Follow the instructions in the [[radeon]] article.
-{{RootCmd|lspci -k -s 00:01.0|output=<pre>
-00:01.0 VGA compatible controller: ATI Technologies Inc Device 9806
-	Subsystem: ASUSTeK Computer Inc. Device 84e3
-	Kernel driver in use: radeon
-	Kernel modules: radeon
-</pre>}}
-
-==== Frame Buffer ====
-
-=== Ethernet ===
-{{RootCmd|lspci -k -s 02:0.0|output=<pre>
-02:00.0 Ethernet controller: Attansic Technology Corp. Device 2062 (rev c1)
-	Subsystem: ASUSTeK Computer Inc. Device 8468
-	Kernel driver in use: atl1c
-</pre>}}
-
-=== ACPI ===
-{{RootCmd|lspci -k -s 00:18.3|output=<pre>
-00:18.3 Host bridge: Advanced Micro Devices [AMD] Device 1703
-	Kernel driver in use: k10temp
-	Kernel modules: k10temp
-</pre>}}
-
-=== Wireless ===
-{{RootCmd|lspci -k -s 01:00.0|output=<pre>
-01:00.0 Network controller: Broadcom Corporation Device 4727 (rev 01)
-	Subsystem: Device 1a3b:2047
-	Kernel modules: brcmsmac
-</pre>}}
-
-=== Sound ===
-{{RootCmd|lspci -k -s 00:01.1|output=<pre>
-00:01.1 Audio device: ATI Technologies Inc Device 1314
-	Subsystem: ASUSTeK Computer Inc. Device 84e3
-	Kernel driver in use: snd_hda_intel
-	Kernel modules: snd-hda-intel
-</pre>}}
-{{RootCmd|lspci -k -s 00:14.2|output=<pre>
-00:14.2 Audio device: ATI Technologies Inc SBx00 Azalia (Intel HDA) (rev 40)
-	Subsystem: ASUSTeK Computer Inc. Device 841c
-	Kernel driver in use: snd_hda_intel
-	Kernel modules: snd-hda-intel
-</pre>}}
-
-=== USB ===
-
-==== 1.1 ====
-{{RootCmd|lspci -k -s 00:12.0|output=<pre>
-00:12.0 USB Controller: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-	Subsystem: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-	Kernel driver in use: ohci_hcd
-</pre>}}
-{{RootCmd|lspci -k -s 00:13.0|output=<pre>
-00:13.0 USB Controller: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-	Subsystem: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller
-	Kernel driver in use: ohci_hcd
-</pre>}}
-
-==== 2.0 ====
-{{RootCmd|lspci -k -s 00:12.2|output=<pre>
-00:12.2 USB Controller: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-	Subsystem: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-	Kernel driver in use: ehci_hcd
-</pre>}}
-{{RootCmd|lspci -k -s 00:13.2|output=<pre>
-00:13.2 USB Controller: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-	Subsystem: ATI Technologies Inc SB700/SB800 USB EHCI Controller
-	Kernel driver in use: ehci_hcd
-</pre>}}
-
-==== 3.0 ====
-{{RootCmd|lspci -k -s 07:00.0|output=<pre>
-07:00.0 USB Controller: Device 1b21:1042
-	Subsystem: ASUSTeK Computer Inc. Device 8488
-	Kernel driver in use: xhci_hcd
-</pre>}}
-
-=== SATA, PCI ===
-{{RootCmd|lspci -k -s 00:04.0|output=<pre>
-00:04.0 PCI bridge: Advanced Micro Devices [AMD] Device 1512
-	Kernel driver in use: pcieport
-</pre>}}
-{{RootCmd|lspci -k -s 00:05.0|output=<pre>
-00:05.0 PCI bridge: Advanced Micro Devices [AMD] Device 1513
-	Kernel driver in use: pcieport
-</pre>}}
-{{RootCmd|lspci -k -s 00:15.0|output=<pre>
-00:15.0 PCI bridge: ATI Technologies Inc Device 43a0
-	Kernel driver in use: pcieport
-</pre>}}
-{{RootCmd|lspci -k -s 00:15.2|output=<pre>
-00:15.2 PCI bridge: ATI Technologies Inc Device 43a2
-	Kernel driver in use: pcieport
-</pre>}}
-{{RootCmd|lspci -k -s 00:11.0|output=<pre>
-00:11.0 SATA controller: ATI Technologies Inc SB700/SB800 SATA Controller [AHCI mode]
-	Subsystem: ATI Technologies Inc Device 4390
-	Kernel driver in use: ahci
-</pre>}}
-{{RootCmd|lspci -k -s 00:14.0|output=<pre>
-00:14.0 SMBus: ATI Technologies Inc SBx00 SMBus Controller (rev 42)
-	Subsystem: ATI Technologies Inc SBx00 SMBus Controller
-	Kernel driver in use: piix4_smbus
-	Kernel modules: sp5100_tco, i2c-piix4
-</pre>}}
-
-=== Webcam ===
-
-=== Bluetooth ===
-
-=== Touchpad ===
-
-=== Keyboard ===
-
-==== Special keys ====
-
-[[Category:Netbooks]]
+todo
+- basic content
