--- a/Udev.mw
+++ b/Udev.mw
@@ -1,255 +1,36 @@
-<languages />
-<translate>
-<!--T:1-->
-{{Metadata|abstract=udev is systemd's device manager for the Linux kernel. It manages device nodes in /dev and handles all user space actions when adding or removing devices.}}
+The udev application manages the device nodes in {{Path|/dev}}. It is triggered by the Linux kernel through uevents and uses a rule-based configuration to decide what actions to undertake when such a uevent has been fired.
 
-<!--T:2-->
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|https://www.freedesktop.org/wiki/Software/systemd/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox gitweb|https://cgit.freedesktop.org/systemd/systemd/tree/src/udev|raw=true}}
-|{{InfoBox project|Udev}}
-}}
+== Using udev
 
-<!--T:76-->
-{{Confused|eudev}}
+=== Requirements
 
-<!--T:3-->
-'''udev''' (user {{Path|/dev}}) is [[Article description::systemd's device manager for the Linux kernel.]] It manages device nodes in {{Path|/dev}} and handles all user space actions when adding or removing devices.
+Most Gentoo Linux systems use udev for the device node management. As such, the requirements for udev are (most of the time) already fulfilled:
 
-== What is udev? == <!--T:4-->
+* A Linux kernel 2.6.32 or higher
+* The <pre>CONFIG_INOTIFY_USER</pre> kernel setting
 
-=== The /dev directory === <!--T:5-->
+=== Installing udev
 
-<!--T:74-->
-{{:/dev/en}}
+The {{Package|sys-fs/udev}} package is part of most Gentoo Linux profiles' default set (called the ''system'' set), so should be installed automatically when you install Gentoo Linux.
 
-== Installation == <!--T:12-->
+However, if this isn't the case, you can always install it by simply emerging it.
 
-<!--T:13-->
-{{Important|When updating udev, check the [[Udev/Upgrade Guide|udev upgrade guide]] for information that can prevent unbootable systems.}}
+{{Emerge|sys-fs/udev}}
 
-=== Kernel === <!--T:14-->
+Next, validate that the ''udev'' init script is automatically started at boot (through the sysinit runlevel):
 
-<!--T:15-->
-{{c|udev}} requires the following kernel options:
+{{RootCmd|rc-config show sysinit|output=<pre>Status of init scripts in runlevel "sysinit"
+  devfs                     [started]
+  dmesg                     [started]
+  udev                      [started]</pre>}}
 
-<!--T:16-->
-<!-- See https://git.kernel.org/?p=linux/hotplug/udev.git;a=blob_plain;f=README -->
-{{KernelBox|1=
-General setup  --->
-    [*] Configure standard kernel features (expert users)  --->
-        [ ] Enable deprecated sysfs features to support old userspace tools
-        [*] Enable signalfd() system call
-Enable the block layer  --->
-    [*] Block layer SG support v4
-Networking support  --->
-    Networking options  --->
-        <*> Unix domain sockets
-Device Drivers  --->
-    Generic Driver Options  --->
-        ()  path to uevent helper
-        [*] Maintain a devtmpfs filesystem to mount at /dev
-    < > ATA/ATAPI/MFM/RLL support (DEPRECATED)  --->
-File systems  --->
-    [*] Inotify support for userspace
-    Pseudo filesystems --->
-        [*] /proc file system support
-        [*] sysfs file system support
-}}
+Also check if the ''udev-postmount'' init script is started through the default runlevel:
 
-=== USE flags=== <!--T:17-->
-
-<!--T:18-->
-Portage knows the <code>udev</code> global USE flag for enabling support for udev in other packages. Adding this USE flag value to the USE flag list (default in all Linux [[Profile (Portage)|profiles]]) will pull in the {{Package|sys-fs/udev}} package automatically:
-
-<!--T:19-->
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-USE="udev"
-}}
-
-<!--T:21-->
-{{USEflag|package=sys-fs/udev}}
-
-=== Emerge === <!--T:70-->
-
-<!--T:22-->
-After setting USE flags update the system so the changes take effect:
-
-<!--T:23-->
-{{Emerge|params+=--changed-use --deep|@world}}
-
-== Configuration == <!--T:24-->
-
-=== Service === <!--T:25-->
-
-<!--T:26-->
-To start udev at boot time, add it to the sysinit runlevel. This can be done by issuing the following command with root privileges:
-
-<!--T:65-->
-{{RootCmd|rc-update add udev sysinit}}
-
-=== Keep classic 'eth0' naming === <!--T:77-->
-
-<!--T:78-->
-{{:Eudev/Network_device_names/en}}
-
-== Advanced configuration == <!--T:27-->
-
-=== Rules === <!--T:28-->
-
-<!--T:29-->
-udev provides a set of rules that match against exported values of uevents (events sent by the kernel) and properties of the discovered device. A matching rule will possibly name and create a device node and run configured programs to setup and configure the device.
-
-<!--T:30-->
-The rule definitions are stored in two locations:
-
-<!--T:66-->
-# '''{{Path|/lib/udev/rules.d/}}''' - Rules in this directory are installed by certain packages, they generally should not be changed by users;
-# '''{{Path|/etc/udev/rules.d/}}''' - This folder is for end-user specified rules. Any new rules should be added in this directory;
-
-<!--T:67-->
-In these directories, multiple rule files (with suffix {{Path|.rules}}) are traversed in alphanumerical order. Inside the rules files, udev will find expressions that might match a uevent together with the state to match (is the uevent because a device is added or removed) and the command to execute.
-
-<!--T:31-->
-The event matching is based on information such as:
-
-<!--T:68-->
-* The ''SUBSYSTEM'' of the uevent (for which type of device is the uevent fired);
-* The ''ACTION'' that is taken (add, change, or remove);
-* One or more attributes (through ''ATTR'' or ''ATTRS''), such as the device class, vendor or other device information;
-* The kernel-provided name (through ''KERNEL''), such as sd* (for SCSI/SATA disks) or input* (for input devices such as mice and keyboards);
-* One or more environment settings (through ''ENV''), used to send information between multiple rules.
-
-<!--T:32-->
-Based on this information, the rule can then state if:
-
-<!--T:69-->
-# Some information needs to be shared with later events (through environment variables)
-# Links need to be created in {{Path|/dev}}
-# Commands need to be executed
-
-<!--T:33-->
-Udev does this for every rule that matches (it does not stop after the first match) to allow a flexible device management approach.
-
-=== Persistent device names === <!--T:34-->
-
-<!--T:35-->
-The kernel detects devices asynchronously, udev mirrors the kernel's [[sysfs]] filesystem and so the devices are named and numbered in order of detection. So by default udev provides no persistent device names. However there are mechanisms for some device classes to provide these:
-
-<!--T:36-->
-* Udev creates for storage devices additional symlinks based on the device's ID, [[Removable_media#UUIDs_and_labels|label, UUID]] and path. See the {{Path|/dev/disk/by-*}} directory. So instead of using e.g. the device file {{Path|/dev/sda}} use the file {{Path|/dev/disk/by-label/SOME_LABEL}}.
-
-<!--T:37-->
-* The same for input devices in the {{Path|/dev/input}} directory.
-
-<!--T:38-->
-* Using custom rules enables users to create their own device files.
-
-== Usage == <!--T:39-->
-
-<!--T:40-->
-Some useful commands are:
-
-<!--T:41-->
-* Show all messages about a given device file:
-: {{RootCmd|udevadm info --query{{=}}all --name{{=}}/dev/DEVICE_FILE}}
-
-<!--T:42-->
-* Monitor udev activities:
-: {{RootCmd|udevadm monitor}}
-
-<!--T:71-->
-* Assign a persistent name to an Ethernet device:
-: {{FileBox|filename=/etc/udev/rules.d/ethernet.rules|lang=bash|1=
-SUBSYSTEM=="net", ACTION=="add", ATTR{address}=="01:23:45:67:89:ab", NAME="eth0"
-}}
-
-<!--T:43-->
-See the ''udevadm'' [[man page]] for more information.
-
-== Troubleshooting == <!--T:44-->
-
-<!--T:45-->
-* {{Bug|udev|search=package}}
-
-=== Log monitor messages === <!--T:46-->
-
-<!--T:47-->
-To log all message when {{c|udevadm monitor}} is ran, modify the following configuration file:
-
-<!--T:48-->
-{{FileBox|filename=/etc/conf.d/udev|lang=bash|1=
-udev_monitor="YES"
-}}
-
-<!--T:49-->
-It will create the new log file located at {{Path|/run/udev/udevmonitor.log}}
-
-=== Debug mode === <!--T:50-->
-
-<!--T:51-->
-Enabling debug mode will output more log messages:
-
-<!--T:52-->
-{{FileBox|filename=/etc/conf.d/udev|lang=bash|1=
-udev_debug="YES"
-}}
-
-<!--T:61-->
-Set the logging priority:
-
-<!--T:62-->
-{{FileBox|filename=/etc/udev/udev.conf|lang=bash|1=
-udev_log="debug"
-}}
-
-<!--T:53-->
-The log file {{Path|/run/udevdebug.log}} will be created but no messages will be logged to it. The most recent versions of udev will log all messages to {{c|dmesg}}.
-
-=== Missing device files {{Path|/dev/null}} and {{Path|/dev/console}} === <!--T:54-->
-
-<!--T:55-->
-Some udev versions need the {{Path|/dev/null}} and {{Path|/dev/console}} files in order to work properly, but can not create them on their own. To manually create these files for udev run the following commands with root privileges:
-
-<!--T:56-->
-{{RootCmd
-|mkdir test
-|mount --bind / test
-|cd test/dev
-|mknod -m 660 console c 5 1
-|mknod -m 660 null c 1 3
-|cd ../..
-|umount test
-|rmdir test
-}}
-
-=== NIC assigned eth0, but is moved to eth1 === <!--T:57-->
-
-<!--T:58-->
-Those having dual network cards on their motherboards may run into a situation where {{c|ifconfig}} may show no eth0 or eth1. {{c|dmesg}} may show their NIC detected as eth0, and later moved to eth1. Performing a {{c|ifconfig -a}} will also show the NIC as eth1. This is caused by using the kernel assigned names in the first place. Users should write custom rules like {{Path|/etc/udev/rules.d/70-my-network.rules}} to use free names like lan0 or wireless0 or use predictable interface names (which have been enabled by default since udev version 197).
-
-<!--T:59-->
-Remember to also remove old files from old versions of udev:
-
-<!--T:60-->
-{{RootCmd|rm /etc/udev/rules.d/70-persistent-net.rules /etc/systemd/network/99-default.link}}
-
-<!--T:75-->
-Also make sure not to pass <code>net.ifnames=0</code> on the kernel commandline. This setting would disable the predictable interface names feature of udev altogether.
-
-== See also == <!--T:63-->
-
-<!--T:64-->
-* {{See also|Eudev}}
-
-== External resources == <!--T:72-->
-
-<!--T:73-->
-{{Bug|575718|text=Bug 575718 - Request for council decision regarding virtual/udev default provider}} - Default {{Package|virtual/udev}} provider changed to {{Package|sys-fs/eudev}}
-
-</translate>
-
-[[Category:Core system]]
-[[Category:Daemons]]
+{{RootCmd|rc-config show default|output=<pre>Status of init scripts in runlevel "default"
+  dnsmasq                   [started]
+  local                     [started]
+  net.eth1                  [started]
+  netmount                  [started]
+  sshd                      [started]
+  udev-postmount            [started]
+  vixie-cron                [started]</pre>}}
